<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#D6D6D6">

<androidx.cardview.widget.CardView
    android:id="@+id/displayCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardElevation="12dp"
    app:layout_constraintTop_toTopOf="parent"
    app:cardCornerRadius="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/displayBg"
        android:padding="24dp">
        
        <TextView
            android:id="@+id/previousCalculationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="#80FFFFFF"
            android:textSize="20sp"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/displayText"
            android:textSize="48sp"
            android:textStyle="bold"
            android:text="@string/_0"
            android:maxLines="1"
            android:layout_marginTop="8dp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="24sp"
        app:cardElevation="12dp"
        app:layout_constraintTop_toBottomOf="@+id/displayCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="4"
            android:rowCount="5"
            android:padding="16dp">

            <Button
                android:id="@+id/btnClear"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/c"
                android:background="@drawable/button_clear_background"/>

            <Button android:id="@+id/btnBackspace"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/back"
                android:background="@drawable/button_operator_background"/>

            <Button android:id="@+id/btnPercentage"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/per"
                android:background="@drawable/button_operator_background"/>

            <Button android:id="@+id/btnDivide"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/div"
                android:background="@drawable/button_operator_background"/>



            <Button
                android:id="@+id/btn7"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/_7"
                android:background="@drawable/button_background"/>

            <Button android:id="@+id/btn8"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/_8"
                android:background="@drawable/button_background"/>

            <Button android:id="@+id/btn9"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/_9"
                android:background="@drawable/button_background"/>

            <Button android:id="@+id/btnMultiply"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/x"
                android:background="@drawable/button_operator_background"/>



            <Button
                android:id="@+id/btn4"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/_4"
                android:background="@drawable/button_background"/>

            <Button android:id="@+id/btn5"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/_5"
                android:background="@drawable/button_background"/>

            <Button android:id="@+id/btn6"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/_6"
                android:background="@drawable/button_background"/>

            <Button android:id="@+id/btnSubtraction"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/sub"
                android:background="@drawable/button_operator_background"/>


            <Button
                android:id="@+id/btn1"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/_1"
                android:background="@drawable/button_background"/>

            <Button android:id="@+id/btn2"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/_2"
                android:background="@drawable/button_background"/>

            <Button android:id="@+id/btn3"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/_3"
                android:background="@drawable/button_background"/>

            <Button android:id="@+id/btnAddition"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/add"
                android:background="@drawable/button_operator_background"/>


            <Button
                android:id="@+id/btn0"
                style="@style/CalculatorButton"
                android:layout_width="1dp"
                android:layout_rowWeight="1"
                android:layout_columnSpan="2"
                android:layout_columnWeight="1"
                android:background="@drawable/button_background"
                android:text="@string/_00" />


            <Button android:id="@+id/btnDot"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/dot"
                android:background="@drawable/button_background"/>

            <Button android:id="@+id/btnEquals"
                style="@style/CalculatorButton"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/equal"
                android:background="@drawable/button_equal_background"/>

        </GridLayout>
    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>